plugins {
  id "com.diffplug.spotless" version "6.25.0" apply false
  id 'org.springframework.boot' version '3.2.3' apply false
  id 'io.freefair.lombok' version "8.6" apply false
  id "io.spring.dependency-management" version "1.1.4" apply false
}

apply from: 'version.gradle'

allprojects {
  repositories {
    mavenCentral()
  }

  group = 'ru.mindils.jb'
  version = '1.0-SNAPSHOT'
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'jacoco'

  sourceCompatibility = '17'
  targetCompatibility = '17'

  dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
  }

  jacocoTestReport {
    dependsOn test

    reports {
      xml.required = false
      html.required = true
      csv.required = false
    }
    afterEvaluate {
      classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
            '**/dto/*',
            '**/entity/*',
            '**/config/*'
        ])
      }))
    }
  }

  test {
    useJUnitPlatform()
  }
}
